--- a/quarkus-client-mtls/pom.xml
+++ b/quarkus-client-mtls/pom.xml
@@ -90,6 +90,17 @@
         <groupId>org.eclipse.jkube</groupId>
         <artifactId>openshift-maven-plugin</artifactId>
         <version>${jkube.version}</version>
+        <configuration>
+          <enricher>
+            <config>
+              <jkube-openshift-route>
+                <generateRoute>true</generateRoute>
+                <tlsInsecureEdgeTerminationPolicy>Allow</tlsInsecureEdgeTerminationPolicy>
+                <tlsTermination>edge</tlsTermination>
+              </jkube-openshift-route>
+            </config>
+          </enricher>
+        </configuration>
       </plugin>
     </plugins>
   </build>
