--- a/quarkus-server-mtls/src/main/jkube/Deployment.yaml
+++ b/quarkus-server-mtls/src/main/jkube/Deployment.yaml
@@ -2,7 +2,6 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: server
-  namespace: mtls
 spec:
   replicas: 1
   selector:
@@ -17,12 +16,11 @@ spec:
         - name: server
           secret:
             secretName: server
-        - name: truststore
-          secret:
-            secretName: truststore
+        - name: config
+          configMap:
+              name: server
       containers:
         - name: server
-          image: 'image-registry.openshift-image-registry.svc:5000/mtls/server:latest'
           ports:
             - containerPort: 8443
               protocol: TCP
@@ -31,6 +29,5 @@ spec:
             - name: server
               readOnly: true
               mountPath: /deployments/tls
-            - name: truststore
-              readOnly: true
-              mountPath: /deployments/tls/ca
+            - name: config
+              mountPath: /deployments/config
