--- a/quarkus-server-mtls/pom.xml
+++ b/quarkus-server-mtls/pom.xml
@@ -80,46 +80,36 @@
     <profile>
       <id>native</id>
       <activation>
-        <property>
-          <name>native</name>
-        </property>
+          <property>
+              <name>native</name>
+          </property>
       </activation>
       <build>
-        <plugins>
-          <plugin>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-maven-plugin</artifactId>
-            <version>${quarkus-plugin.version}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>native-image</goal>
-                </goals>
-                <configuration>
-                  <enableHttpUrlHandler>true</enableHttpUrlHandler>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>${surefire-plugin.version}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>integration-test</goal>
-                  <goal>verify</goal>
-                </goals>
-                <configuration>
-                  <systemProperties>
-                    <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
-                  </systemProperties>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
+          <plugins>
+              <plugin>
+                  <artifactId>maven-failsafe-plugin</artifactId>
+                  <version>${surefire-plugin.version}</version>
+                  <executions>
+                      <execution>
+                          <goals>
+                              <goal>integration-test</goal>
+                              <goal>verify</goal>
+                          </goals>
+                          <configuration>
+                              <systemPropertyVariables>
+                                  <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                                  <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                                  <maven.home>${maven.home}</maven.home>
+                              </systemPropertyVariables>
+                          </configuration>
+                      </execution>
+                  </executions>
+              </plugin>
+          </plugins>
       </build>
-    </profile>
+      <properties>
+          <quarkus.package.type>native</quarkus.package.type>
+      </properties>
+  </profile>
   </profiles>
 </project>
