--- a/quarkus-server-mtls/pom.xml
+++ b/quarkus-server-mtls/pom.xml
@@ -15,6 +15,9 @@
     <quarkus.platform.version>2.3.1.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
     <jkube.version>1.4.0</jkube.version>
+
+    <!-- Application specific -->
+    <jkube.namespace>app-dev</jkube.namespace>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -77,6 +80,12 @@
     </plugins>
   </build>
   <profiles>
+    <profile>
+      <id>prod</id>
+      <properties>
+        <jkube.namespace>app-prod</jkube.namespace>
+      </properties>
+    </profile>
     <profile>
       <id>native</id>
       <activation>
